Added ability to add/remove bread prices

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
   <script type="text/javascript" src="DOMHandler.js"></script>
   <script type="text/javascript" src="SandwichMaker.js"></script>
+  <script type="text/javascript" src="Bread.js"></script>
   <script type="text/javascript" src="Meat.js"></script>
 </body>
 </html>
