added ability to add/remove cheese prices to cost and DOM

--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
   <script type="text/javascript" src="SandwichMaker.js"></script>
   <script type="text/javascript" src="Bread.js"></script>
   <script type="text/javascript" src="Meat.js"></script>
+  <script type="text/javascript" src="Cheese.js"></script>
 </body>
 </html>
