Added ability to add/remove Condiments to the DOM

--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
   <script type="text/javascript" src="Bread.js"></script>
   <script type="text/javascript" src="Meat.js"></script>
   <script type="text/javascript" src="Cheese.js"></script>
+  <script type="text/javascript" src="Condiments.js"></script>
 </body>
 </html>
